# gsuidcore_plugin_chat

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
GsChat/: __init__.py  config.py  gs_billing.py  gs_chat.py  gs_extract.py  gs_image.py  gs_material.py  gs_other.py  gs_todo.py  utils.py
GsChat/billing/: __init__.py  billing.py  build.py
GsChat/chat/: __init__.py  base.py  bing.py  build.py  engine.py  normal.py  openai.py  poe.py  poe_web.py
GsChat/extract/: __init__.py  bilibili.py  bilibili_utils.py  build.py  douyin.py  utils.py
GsChat/image/: __init__.py  base.py  bing_ai.py  build.py  engine.py  filckr.py  webImage.py
GsChat/material/: __init__.py  build.py  matrial.py  utils.py
GsChat/others/: __init__.py  browser.py  build.py  setereo.py  song.py
GsChat/todo/: __init__.py  build.py  todo.py  utils.py
gsuidcore_plugin_chat/: __init__.py  bing.py  browser.py  chat.py  config.py  gs_billing.py  gs_chat.py  gs_image.py  gs_material.py  gs_other.py  gs_todo.py  image.py  openai.py  stereotypes.py  utils.py
gsuidcore_plugin_chat/billing/: billing.py  build.py
gsuidcore_plugin_chat/chat/: base.py  build.py  engine.py  normal.py  openai.py
gsuidcore_plugin_chat/data/: config.json  config_template.json  personality.json  stereo.data
gsuidcore_plugin_chat/image/: __init__.py  base.py  bing_ai.py  engine.py  filckr.py  webImage.py
gsuidcore_plugin_chat/material/: __init__.py  config.py  matrial.py  utils.py
gsuidcore_plugin_chat/others/: __init__.py  browser.py  build.py  setereo.py
(+8 files in other folders)
