[tool.poetry]
name = "gsuidcore-plugin-chat"
version = "0.1.0"
description = "一个融合了openai, newbing, Poe 的智能回复插件"
authors = ["wangyu1997 <wangyu19970819@qq.com>"]
readme = "README.md"
packages = [{include = "gsuidcore_plugin_chat"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
pycln = "^2.1.2"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
default = true
secondary = false

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
